--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "classnames": "^2.2.6",
     "gh-pages": "^3.1.0",
     "react": "^16.13.1",
+    "react-autocomplete": "^1.8.1",
     "react-chartjs-2": "^2.9.0",
     "react-countup": "^4.3.3",
     "react-dom": "^16.13.1",
